deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
